--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ nav{
     font-size: 24px;
     text-transform: uppercase;
     font-weight: 900;
-    color: #683aa4
+    color: #683
 }
 .navbar-brand:hover{
     color: #072cfc
@@ -72,7 +72,7 @@ button{
 }
 #contact {
     text-align: center !important;
-    background-color: #683aa4 !important;
+    background-color: #683 !important;
     color: white !important;
 }
 #contact h1 {
