--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ section#home{
 section h1{
     text-transform: uppercase;
     font-weight: 800;
-    color: #683aa4;
+    color: #683;
     text-align: left;
     margin-bottom: 15px;
 }
